# mikoto

./: .gitignore  .gitmodules  .startup.sh.swp  README.md  builder.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  sample.gcode  setup.sh  start.sh  startup.sh  tsconfig.json  tsconfig.main.json  webpack.config.js  webpack.config.ts
Framework/: cubismmodelsettingjson.d.ts  icubismmodelsetting.d.ts  live2dcubismframework.d.ts
Framework/effect/: cubismbreath.d.ts  cubismeyeblink.d.ts  cubismpose.d.ts
Framework/id/: cubismid.d.ts  cubismidmanager.d.ts
Framework/math/: cubismmodelmatrix.d.ts
Framework/model/: cubismmoc.d.ts  cubismmodel.d.ts  cubismmodeluserdata.d.ts  cubismusermodel.d.ts
Framework/motion/: acubismmotion.d.ts  cubismmotion.d.ts  cubismmotioninternal.d.ts  cubismmotionmanager.d.ts  cubismmotionqueueentry.d.ts  cubismmotionqueuemanager.d.ts
Framework/physics/: cubismphysics.d.ts  cubismphysicsinternal.d.ts
Framework/rendering/: cubismrenderer.d.ts  cubismrenderer_webgl.d.ts
Framework/utils/: cubismjson.d.ts
public/: index.html  index1.html  index2.html  render.js
src/main/: consciousness.ts  createEngine.ts  index.ts  logger.ts  preload.ts  server.ts
src/renderer/: Body.tsx  Home.css  Home.tsx  Router.tsx  body.html  facemesh.js  index.html  index.ts  index.tsx  preload.js  renderer.ts  sketch.js
src/tty/: app.py  base_camera.py  camera.py  control1.py  qr_detector.py  sampleIndex.js  serial.js  server.js
src/types/: window.d.ts
templates/: index.html  index3.html  index4.html
views/: list.pug
(+13 files in other folders)
